Attempted fix to mark on mobile

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -68,10 +68,10 @@
 }
 
 .parchment-frame {
-    height: 90vh;
+    height: 92vh;
     width: 75vh;
     bottom: 0px;
-    margin-right: 15vh;
+    margin-right: 15.5vh;
     display: none;
 
     @media (min-width: 1280px) {
